<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/workout" >

    <LinearLayout
        android:id="@+id/workout_session_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="5dip"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/current_interval_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/current_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="5dip"
                android:singleLine="true"
                android:textColor="#ffffff00"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/current_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="5dip"
                android:singleLine="true"
                android:textColor="#ffffff00"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/end_workout"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/workout_progress"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_red"
        android:text="@string/end_workout"
        android:visibility="invisible" />

    <Button
        android:id="@+id/pause_workout"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/btn_yellow"
        android:text="@string/pause_workout" />

    <Button
        android:id="@+id/resume_workout"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/btn_green"
        android:text="@string/resume_workout"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/workout_progress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <Chronometer
        android:id="@+id/interval_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pause_workout"
        android:layout_centerHorizontal="true"
        android:format="@string/chronometer_interval_format"
        android:paddingBottom="10dip"
        android:paddingTop="65dip"
        android:textColor="#ffffff00"
        android:textSize="24sp" />

    <Chronometer
        android:id="@+id/workout_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:format="@string/chronometer_workout_format" />

</RelativeLayout>